configure public instance